<resources>
    <string name="app_name">PSICO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Edad">Edad</string>
    <string name="Ciudad">Municipio o ciudad</string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Repita_la_contraseña">Repita la contraseña</string>
    <string name="Eres_psicólogo">¿Eres psicólogo/a?</string>
    <string name="Sí">Sí</string>
    <string name="No">No</string>
    <string name="Registrarme">Registrarme</string>
    <string name="Iniciar_Sesión">Iniciar Sesión</string>
    <string name="No_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="Regístrate_aquí">Regístrate aquí</string>
    <string name="Psicólogos">Psicólogos</string>
    <string name="Foro">Foro</string>
    <string name="Consejos">Consejos</string>
    <string name="Correo_electrónico">Correo electrónico:</string>
    <string name="Añadir_un_post_al_foro">Añadir un post al foro</string>
    <string name="Direccionp">Dirección:</string>
    <string name="Precio">Precio:</string>
    <string name="Teléfono">Teléfono:</string>
    <string name="Especialidades_que_trata">Especialidades que trata:</string>
    <string name="Horario">Horario:</string>
    <string name="Realiza_consultas">Realiza consultas:</string>
    <string name="Descripcion">Descripción:</string>
    <string name="Añadir_una_reseña">Añadir una reseña</string>
    <string name="Valorar_y_escribir_una_reseña">Valorar y escribir una reseña</string>
    <string name="Compartir_reseña">Compartir reseña</string>
    <string name="Provincia">Provincia</string>
    <string name="Dirección">Dirección</string>
    <string name="Precio_por_hora">Precio por hora</string>
    <string name="Número_de_teléfono">Número de teléfono</string>
    <string name="Especialidades_quetrata">Especialidades que trata</string>
    <string name="Horario_">Horario</string>
    <string name="Online">Online</string>
    <string name="Presenciales">Presenciales</string>
    <string name="Telefónica">Telefónica</string>
    <string name="Escribe_aquí_tu_descripción">Escribe aquí tu descripción</string>
    <string name="Publicar">Publicar</string>
    <string name="Añadir_una_foto">Añadir una foto:</string>
    <string name="Rellene_los_siguientes_datos_para_publicitarse">Rellene los siguientes datos para publicitarse:</string>
    <string name="Fuente_de_información">Fuente de información:</string>
    <string name="No_hay_reseñas">No hay reseñas</string>
    <string name="No_hay_resultados_para_la_búsqueda_realizada">No hay resultados para la búsqueda realizada.</string>
    <!--string name=""></string>












    <string name=""></string>
    <string name=""></string>
    <string name=""></string>



    <string name=""></string-->


</resources>